# elementary-power-manager-daemon

./: README.md  meson.build
data/: autostart.desktop  io.elementary.power-manager-daemon.gschema.xml  io.elementary.power-manager-daemon.policy  io.elementary.power-manager-daemon.service  meson.build
meson/: post_install.py
src/: Application.vala  SessionManager.vala  meson.build
src/Backends/: PowerMode.vala
src/Utils/: Battery.vala  CPUFreq.vala
